# vela

./: Cargo.toml  GEMINI.md  Makefile  README.md  SECURITY.md  storage-config.toml
src/: cli.rs  config.rs  device.rs  main.rs  server.rs
src/static/: index.html
