[package]
name = "vela"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive"] }
lsblk = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.10"
tower-http = { version = "0.6.8", features = ["fs"] }
walkdir = "2.5.0"
