[package]
name = "vela"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
clap = { version = "4.5.53", features = ["derive"] }
lsblk = "0.6.1"
nix = { version = "0.31.2", features = ["user"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.47"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.17"
toml = "0.9.10"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["fs"] }
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"
